--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://carrozzo-lc.github.io/frontend-ui-test",
   "name": "frontend-ui-test",
   "version": "0.1.0",
   "private": true,
@@ -41,6 +42,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
     "firebase-tools": "^9.18.0",
+    "gh-pages": "^4.0.0",
     "h3-js": "^3.7.2",
     "history": "^5.0.1",
     "husky": "^7.0.2",
@@ -61,6 +63,8 @@
     "typescript": "^4.4.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
